--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
           <ul>⏰En mi tiempo libre leo y trato de aprender sobre nuevas tecnologias, también creo contenido en redes sociales y Podcast's.</ul>
           <ul>🧐Estoy abierto a escuchar propuestas y colaborar en proyectos que esten relacionados a mis habilidades, y que me sumen experiencia en esta hermosa industria junto a personas que les guste trabajar en equipo. </ul> 
         </p>
-        <h2 class="settings">Herramientas</h2>
+        <h2 class="settings">Herramientas:</h2>
         <p>VsCode|HTML5|CSS|JavaScript|GIT|Github|Figma|Tailwind|ES6.</p>                 
        </div>
       </div>
