--- a/aboutme.html
+++ b/aboutme.html
@@ -52,17 +52,17 @@
              <h3>Mis Notas</h3>
           <div class="notes-main-container">
             <article class="note-container">
-              <img src="" alt="(Pronto link disponible)">
+              <img class="abmeheight" src="./assets/projectimg/tuned.png" alt="(Pronto link disponible)">
               <h4>Git Cheat Sheet</h4>
               <p>Comparto mis notas en un pdf, para cualquier persona que le sirva refrescar conocimientos.</p>
             </article>
             <article class="note-container">
-              <img src="" alt="(Pronto link disponible)">
+              <img class="abmeheight" src="./assets/projectimg/tuned.png" alt="(Pronto link disponible)">
               <h4>HTML Cheat Sheet</h4>
               <p>Comparto mis notas con etiquetas esenciales de htmls en un pdf, para cualquier persona que le sirva refrescar conocimientos.</p>
             </article>
             <article class="note-container">
-              <img src="" alt="(Pronto link disponible)">
+              <img class="abmeheight" src="./assets/projectimg/tuned.png" alt="(Pronto link disponible)">
               <h4>CSS Cheat Sheet</h4>
               <p>Comparto mis notas de css flexbox pdf, para cualquier persona que le sirva refrescar conocimientos.</p>
             </article>
