--- a/aboutme.html
+++ b/aboutme.html
@@ -38,16 +38,37 @@
           <h1>Hola, mi nombre es Juan!</h1>
           <p>
           <ul>💻Implemento soluciones mediante conocimientos técnicos en Programación, y Mantenimiento/Reparación de equipos de Computación.</ul>
-          <ul>🎓Además cuento con experiencia en Marketing digital y comunicación academica sesgada a las Relaciones Públicas e Institucionales.</ul>
+          <ul>🎓Además cuento con estudios y experiencia en Marketing digital y comunicación academica sesgada a las Relaciones Públicas e Institucionales.</ul>
           <ul>⏰En mi tiempo libre leo y trato de aprender sobre nuevas tecnologias, también creo contenido en redes sociales y Podcast's.</ul>
-          <ul>🧐Estoy abierto a escuchar propuestas y colaborar en proyectos que esten relacionados a mis habilidades, y que me sumen experiencia en esta hermosa industria junto a personas que les guste trabajar en equipo. </ul> 
+          <ul>🔍Estoy abierto a escuchar propuestas y colaborar en proyectos que esten relacionados a mis habilidades, y que me sumen experiencia en esta hermosa industria junto a personas que les guste trabajar en equipo. </ul> 
         </p>
-        <h2 class="settings">Lenguajes y tecnologías que uso:</h2>
-        <p>HTML5|CSS|JavaScript|VsCode|GIT|Github|Figma|Tailwind|ES6.</p>                 
-       </div>
+      </div>
       </div>
     </section>
-    <section class="profile-main-notes">
+
+    <section class="tecno-info">
+      <h2 class="settings">Lenguajes y tecnologías que uso: <br></h2>
+    <img align="center" alt="juan-html" height="20" width="70" src= "https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/> 
+      <img align="center" alt="juan-css" height="20" width="70" src= "https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/> 
+      <img align="center" alt="juan-js" height="20" width="70" src= "https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"/> 
+      <img align="center" alt="juan-vs" height="70" width="80" src= "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/visualstudio/visualstudio-plain-wordmark.svg"/> 
+      <img align="center" alt="juan-git" height="70" width="40" src= "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-plain-wordmark.svg"/> 
+      <img align="center" alt="juan-github" height="20" width="70" src= "https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"/> 
+      <img align="center" alt="juan-tailwind" height="70" width="80" src= "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original-wordmark.svg"/>
+      <img align="center" alt="juan-bootstrap" height="20" width="70" src= "https://img.shields.io/badge/Bootstrap-563D7C?style=for-the-badge&logo=bootstrap&logoColor=white"/> 
+      <img align="center" alt="juan-figma" height="40" width="70" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg"/> 
+      <img align="center" alt="juan-canva" height="40" width="70" src= "https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg"/>
+      <img align="center" alt="juan-windows" height="20" width="70" src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white" />
+      <br>
+  
+      <div> Currently learning:
+      <img align="center" alt="juan-html" height="40" width="50" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" />
+      <img align="center" alt="juan-html" height="40" width="50" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" />
+      <img align="center" alt="juan-html" height="40" width="50" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" />
+      </div> <br>
+    </section>
+    
+      <section class="profile-main-notes">
        <div class="grid-container">
              <h3>Mis Notas</h3>
           <div class="notes-main-container">
