update to webpage
mantenimiento, puliendo y practicando, ya la semana que viene la hosteo en hostinger.com iujuuu

--- a/aboutme.html
+++ b/aboutme.html
@@ -38,8 +38,8 @@
           <h1>Hola, mi nombre es Juan!</h1>
           <p>
           <ul>💻Implemento soluciones mediante conocimientos técnicos en Programación, y Mantenimiento/Reparación de equipos de Computación.</ul>
-          <ul>🎓Además cuento con estudios y experiencia en Marketing digital y comunicación academica sesgada a las Relaciones Públicas e Institucionales.</ul>
-          <ul>⏰En mi tiempo libre leo y trato de aprender sobre nuevas tecnologias, también creo contenido en redes sociales y Podcast's.</ul>
+          <ul>🎓Además cuento con estudios culminados en Relaciones Públicas, y experiencia en Marketing digital.</ul>
+          <ul>⏰En mi tiempo libre leo y trato de aprender sobre nuevas tecnologias, también creo contenido en redes sociales.</ul>
           <ul>🔍Estoy abierto a escuchar propuestas y colaborar en proyectos que esten relacionados a mis habilidades, y que me sumen experiencia en esta hermosa industria junto a personas que les guste trabajar en equipo. </ul> 
         </p>
       </div>
