--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
     <section class="profile-main-container">
       <div class="grid-container profile-container">
         <div>
-            <img src="./assets/projectimg/animeju.png" alt="Foto perfil">
+            <img src="./assets/projectimg/js.png" alt="Foto perfil">
         </div>
         <div>
           <h1>Hola, mi nombre es Juan!</h1>
